# orbit

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  apr.md  composite.yaml  config.yaml  config.yaml.example  docker-demo-plan.md  env.example  gguf-models.conf  intent_adapter_implementation_plan.md  jul.md  main.py  pyproject.toml  ruff.toml  run-chat-app.sh  server.py
.github/: ISSUE_READY_TO_PASTE.md
api/: .gitignore  README.md  api.d.ts  api.ts  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
api/test/: README.md  (+5 more)
chatbot-widget/: README.md  index.html  package.json  tsconfig.app.json
chroma/:  README.md  .gitignore  activity_qa_pairs.json  config.yaml  create-chroma-collection.py  delete_chroma_collection.py  list-chroma-collections.py  query-chroma-collection.py  requirements.txt  test_prompt_guardrails.py
client/: .env.example  README.md  package.json
clients/haskell/: Makefile  orbit-client.cabal
clients/haskell/app/: Main.hs
clients/haskell/src/Orbit/: ApiClient.hs
clients/python/: .gitignore  LICENSE  README.md  chat_client.py  pyproject.toml
clients/python/schmitech_orbit_client/: __init__.py  chat_client.py
config/: adapters.yaml  config.yaml  config.yaml.example  datasources.yaml  document.yaml  embeddings.yaml  guardrails.yaml  image.yaml  inference.yaml  llama_cpp.yaml  mcp_client.yaml  moderators.yaml  ocr.yaml  ollama.yaml  personaplex.yaml  rerankers.yaml  rewriters-prompts.yaml  sound.yaml  stores.yaml  stt.yaml  tts.yaml  video.yaml  vision.yaml
configs/: commercial.yaml  development.yaml  full-featured.yaml  local-llm.yaml  minimal.yaml  ollama-only.yaml  production.yaml
docker/: Dockerfile  Dockerfile.basic  Dockerfile.demo  Dockerfile.flavor  FLAVOR_IMAGES_PLAYBOOK.md  README-BASIC.md  README-DEMO.md  README.md  config-demo.yaml  docker-cleanup.sh  docker-compose.demo.yml  docker-compose.yml  docker-demo-plan.md  docker-entrypoint-basic.sh  docker-entrypoint.sh  docker-init.sh  download-model.py  entrypoint-flavor.sh  init-demo-keys.sh  orbit-docker.sh  publish-basic.sh  publish-demo.sh  publish-flavor.sh  publish.sh  requirements-demo.txt  runtime_profiles.py
docs/: ORBIT_Capability_Matrix.md  README.md  a2a-protocol.md  adapter-architecture.md  adapter-configuration.md  adapters.md  ai-document-ocr.md  api-keys.md  authentication.md  autocomplete-architecture.md  aws-api-gateway-orbit.md  aws-load-balancer-rules-minimal.md  aws-load-balancer-rules.md  azure-openai-setup.md  bitnet-setup.md  chat_service_system_prompts.md  chroma-setup.md  chunking-architecture.md  circuit-breaker-patterns.md  clock-service.md  configuration.md  conversation-threading-architecture.md  conversation_history.md  datasource-pooling.md  docker-deployment.md  fault-tolerance-architecture.md  file-adapter-architecture.md  file-adapter-guide.md  file-upload-magika-inspection.md  image-persistence-design.md  install-ffmpeg-aws-linux.md  intent-sql-rag-system.md  language-detection-architecture.md  language-detection-remaining-items.md  language_detection.md  llama-cpp-server-guide.md  llm-guard-service.md  mcp_protocol.md  memory_leak_prevention.md  message-queue-architecture.md  (+32 more)
examples/: city-qa-pairs.json  realtime_voice_client.py  sample-db-setup.sh  zai_example.py
fastapi/: .gitignore  chat_client.py  requirements.txt  run.sh  server.py
install/: Dockerfile  README.md  build-tarball.sh  dependencies.toml  docker-compose.yml  docker-init.sh  download_hf_gguf_model.py  download_hf_ggufl.py  generate_requirements.py  gguf-models.json  install.sh.template  orbit.db.default  requirements.txt  sample-db-setup.sh  setup.bat  setup.sh  win_setup_helper.py  windows.md  wizard.py
orbit-cli/: .gitignore  config.yaml  orbit.sql  requirements.txt  schema.sql
orbit_cli/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  __version__.py  cli.py  main.py  pyproject.toml  pytest.ini  setup.py
orbit_cli/api/: __init__.py  base_client.py  client.py  decorators.py
orbit_cli/api/endpoints/: __init__.py  auth.py  keys.py  prompts.py  users.py
orbit_cli/commands/: __init__.py  api_keys.py  auth.py  base.py  config.py  prompts.py  registry.py  server.py  users.py
orbit_cli/config/: __init__.py  defaults.py  manager.py  validator.py
orbit_cli/core/: __init__.py  constants.py  exceptions.py  types.py
orbit_cli/output/: __init__.py  formatter.py
orbit_cli/server/: __init__.py  controller.py  health.py  process_manager.py  status.py
orbit_cli/tests/: README.md  __init__.py  conftest.py
orbit_cli/tests/integration/: test_cli_integration.py
orbit_cli/tests/unit/: __init__.py
orbit_cli/tests/unit/test_api/: __init__.py  test_base_client.py  test_decorators.py
orbit_cli/tests/unit/test_api/test_endpoints/: test_auth.py  test_keys.py  test_prompts.py  test_users.py
orbit_cli/tests/unit/test_commands/: test_server_commands.py
orbit_cli/tests/unit/test_config/: __init__.py  test_defaults.py  test_manager.py  test_validator.py
orbit_cli/tests/unit/test_server/: __init__.py  test_controller.py  test_process_manager.py
orbit_cli/utils/: __init__.py  logging.py  security.py
podman/: Containerfile  README.md  compose.yml  mongo.conf  orbit-podman.sh  podman-cleanup.sh  podman-init.sh  test-mongo-connection.sh
prompts/: no_results_message.txt  safety_prompt.txt
sample_db/: activity-qa-pairs.json  sample-db-setup.sh
server/: .dockerignore  .env.example  .gitignore  Dockerfile  PRODUCTION_READINESS.md  README.md  config.yaml  config.yaml.example  docker-compose.yml  docker-init.sh  inference_server.py  main.py  package.json  refactor-strategies.md  requirements.txt  sample-db-setup.sh  server.py  setup.sh  start.sh  tsconfig.json  worker_main.py
tests/: check_ollama.py  check_vllm.py  run_guardrail_tests.sh  test_cases.json  test_prompt_guardrails.py
utils/: generate_changelog.sh
widget/: README.md  build.sh  custom-build.sh  custom-chat-config.sample.json  demo.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
(+2795 files in other folders)
