cabal-version:       2.4
name:                orbit-client
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules:  Orbit.ApiClient
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base >=4.14 && <5
    , bytestring
    , text
    , aeson
    , conduit
    , http-conduit
    , http-types

executable orbit-example
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:
      base
    , text
    , bytestring
    , aeson
    , http-conduit
    , orbit-client
  default-language: Haskell2010
